--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "main.js",
   "scripts": {
+    "run": "node main.js",
+    "start": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bson": "^1.1.6",
+    "express": "^4.19.2",
+    "mongoose": "^5.13.13",
+    "nodemon": "^3.1.4"
+  }
 }
