--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bson": "^1.1.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^5.13.13",
     "nodemon": "^3.1.4"
