--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
+    "typescript": "^5.5.4",
     "vite": "^4.4.0"
   }
 }
